--- a/public/index.html
+++ b/public/index.html
@@ -18,41 +18,80 @@
     <script defer src="/__/firebase/11.6.0/firebase-performance-compat.js"></script>
     <!-- Initialize Firebase SDK -->
     <script defer src="/__/firebase/init.js"></script>
+
+    <style>
+      body { font-family: Arial, sans-serif; margin: 0; padding: 1rem; background: #f9f9f9; }
+      h1, h2, h3 { text-align: center; }
+      section { max-width: 600px; margin: 1rem auto; background: #fff; padding: 1rem; border-radius: 4px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
+      table { width: 100%; border-collapse: collapse; margin-top: 0.5rem; }
+      th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
+      th { background: #efefef; }
+    </style>
   </head>
   <body>
-    <h1 style="text-align:center;">PulseLink Dashboard</h1>
-    <h2 id="daily-average" style="text-align:center; margin-top:1rem;">
-      Average Heart Rate for <span id="average">— BPM</span>
-    </h2>
+    <h1>PulseLink Dashboard</h1>
+
+    <section>
+      <h2>Latest Average Heart Rate</h2>
+      <p id="daily-average" style="font-size:1.5rem;">— BPM</p>
+      <p id="latest-date" style="font-size:1rem;"></p>
+    </section>
+
+    <section>
+      <h3>Previous Averages</h3>
+      <table>
+        <thead>
+          <tr><th>Date</th><th>Avg BPM</th></tr>
+        </thead>
+        <tbody id="history-body">
+          <!-- previous averages -->
+        </tbody>
+      </table>
+    </section>
 
     <script>
       document.addEventListener('DOMContentLoaded', () => {
-        // 1. Get a Firestore reference
         const db = firebase.firestore();
-        // 2. Query only the latest reading
-        const q = db.collection('apple-health')
-                    .orderBy('timestamp', 'desc')
-                    .limit(1);
-        // 3. Listen for live updates on the single latest doc
+        const q = db.collection('apple-health').orderBy('timestamp', 'desc');
         q.onSnapshot(snapshot => {
-          const avgEl = document.getElementById('average');
+          const avgEl = document.getElementById('daily-average');
+          const latestDateEl = document.getElementById('latest-date');
+          const historyBody = document.getElementById('history-body');
+          historyBody.innerHTML = '';
+
           if (snapshot.empty) {
             avgEl.textContent = 'No data';
+            latestDateEl.textContent = '';
             return;
           }
-          const data = snapshot.docs[0].data();
-          const rawValue = data.heart_rate;
-          // Compute BPM using local device time
-          const now = new Date();
-          const minutesSinceMidnight = now.getHours() * 60 + now.getMinutes();
-          const bpm = minutesSinceMidnight > 0 ? (rawValue / minutesSinceMidnight).toFixed(1) : '—';
-          // Format the date for display
-          const ts = new Date(data.timestamp);
-          const dateStr = `${ts.getMonth() + 1}/${ts.getDate()}`;
-          avgEl.textContent = `${dateStr}: ${bpm} BPM`;
-        }, err => {
-          console.error('Error fetching data:', err);
-        });
+
+          // Latest entry
+          const latestData = snapshot.docs[0].data();
+          const rawTs = latestData.timestamp;
+          const tsDate = (rawTs && typeof rawTs.toDate === 'function')
+            ? rawTs.toDate()
+            : new Date(rawTs);
+          const avg = parseFloat(latestData.heart_rate).toFixed(1);
+          const formatted = tsDate.toLocaleString();
+          avgEl.textContent = `${avg} BPM`;
+          latestDateEl.textContent = formatted;
+
+          // Previous entries (skip latest)
+          snapshot.docs.slice(1, 6).forEach(doc => {
+            const data = doc.data();
+            const rawPrevTs = data.timestamp;
+            const prevTs = (rawPrevTs && typeof rawPrevTs.toDate === 'function')
+              ? rawPrevTs.toDate()
+              : new Date(rawPrevTs);
+            const prevAvg = parseFloat(data.heart_rate).toFixed(1);
+            const prevFormatted = prevTs.toLocaleString();
+            const tr = document.createElement('tr');
+            tr.innerHTML = `
+              <td>${prevFormatted}</td>
+              <td>${prevAvg} BPM</td>`;
+            historyBody.appendChild(tr);
+          });
+        }, err => console.error('Error:', err));
       });
     </script>
   </body>
